--- a/src/sass/base/_variables.scss
+++ b/src/sass/base/_variables.scss
@@ -26,9 +26,8 @@
 
 
 
-$SansSerif : 'Raleway', $helvetica;
-$Serif: 'Neuton', $georgia;
-
+$SansSerif : 'Work Sans', $helvetica;
+$Serif: 'Elsie', $georgia;
 
 /////////////////////////////////////-+++
 // colors
